--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "scommerce/speed-optimizer-suite-meta",
     "description": "Speed Optimizer Suite for Magento 2",
     "require": {
-        "php": "~7.0.13|~7.1.0|~7.2.0|~7.3.0|~7.4.0",
+        "php": ">=7.2.0",
         "scommerce/core": "2.0.*",
         "scommerce/seobase": "2.0.*",
         "scommercemage/canonical": "2.0.*",
